--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<xml version="1.0" encoding="UTF-8"?>
 <web-app version="2.5" 
 	xmlns="http://java.sun.com/xml/ns/javaee" 
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
@@ -9,13 +9,7 @@
   <servlet>
     <servlet-name>UploadServlet2</servlet-name>
     <servlet-class>com.minhui.servlet.UploadServlet2</servlet-class>
-  </servlet>
-
-
-
-
- 
-  <servlet-mapping>
+  </servlet>  <servlet-mapping>
     <servlet-name>UploadServlet2</servlet-name>
     <url-pattern>/upload2</url-pattern>
   </servlet-mapping>
